--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "redux-vanilla",
   "version": "1.0.0",
-  "description": "",
+  "description": "Experimenting with Redux and Vanilla JS",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "prebuild": "rm -rf dist",
+    "build": "parcel build index.html"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "EO",
+  "license": "MIT",
   "devDependencies": {
     "parcel": "^1.9.7"
   },
